Add React native Vector icons and linked

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,6 +20,8 @@ target 'RealTimeChat' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'RealTimeChatTests' do
     inherit! :complete
     # Pods for testing
