--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
