--- a/ios/RealTimeChat/Info.plist
+++ b/ios/RealTimeChat/Info.plist
@@ -35,8 +35,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We use this permission to choose photo</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We use this to take use camera, and take photo</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We use this param to recording video audio</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
