--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-native-firebase/database": "^15.7.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
